Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - Added 'naming.Indirect(key)', a 'binding.IComponentKey' that can be used to
   do an indirect lookup via another 'IComponentKey' (such as a name).  Using
   'naming.Indirect()', you can replace code like this::

        socket = binding.Obtain(
            lambda self: self.lookupComponent(self.socketURL),
            adaptTo = [IListeningSocket]
        )

   with code like this::

        socket = binding.Obtain(
            naming.Indirect('socketURL'), adaptTo = [IListeningSocket]
        )

 - Added 'peak.running.supervisor', a mini-framework for pre-forking,
   multiprocess servers, such as for FastCGI.  The framework includes a ZConfig
   schema for process supervisors, and support for automatically forking new
   children (up to a predefined maximum, with a minimum interval between
   launches) when a socket has pending connections and all of its child
   processes are busy.  With this setup, you can take more advantage of
   multiprocessor machines for CPU-intensive services.

 - Standardized these characteristics of name and address syntax:

   * '//' at the beginning of URL bodies is *mandatory* when the URL begins
     with an "authority" as described by RFC 2396.  When the URL is not
     required to contain an authority (e.g. 'peak.storage.SQL.GenericSQL_URL'),
     the '//' is *optional*, and the canonical form of the URL will not include
     it.

   * Standardized names for RFC 2396 fields: 'user', 'passwd', 'host', and
     'port'.

 - Added 'peak.metamodels.ASDL', a metamodel for the Zephyr Abstract Syntax
   Description Language.  ASDL is a convenient way to describe a domain model
   for an abstract syntax tree (AST), and the models generated with the new
   ASDL tool can be combined with concrete syntax to create a complete parsing
   solution for "mini languages", possibly including the Python language